<resources>
    <string name="app_name">FlowerPower</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PaginaInicial">Página Inicial</string>
    <string name="filtros">Filtros</string>
    <string name="contacte_nos">Contacte-nos</string>
    <string name="sair">Sair da Applicação</string>
    <string name="carrinho">Carrinho de Compras</string>
    <string name="conta">Conta</string>
    <string name="email">Email</string>
    <string name="palavra_passe">Palavra-passe</string>
    <string name="iniciar">Iniciar Sessão</string>
    <string name="registar">Regista-te</string>
    <string name="date">datePicker</string>

    <string name="title_placeholder">Títlo</string>
    <string name="news_placeholder">Descrição</string>
    <string name="categoria_info_placeholder">Informação</string>

    <string name="nome_carrinho">Nome do artigo</string>
    <string name="individual">Individual</string>

    <string name="molho">Molho</string>
    <string name="preco">Preço:</string>
    <string name="total">Total:</string>
    <string name="pagamento">Pagamento</string>


    <string-array name="categoria_titles">
        <item>Mais Vendidas</item>
        <item>Dia da Mãe</item>
        <item>Decorativas</item>
        <item>Árvores</item>
        <item>Mais raras</item>
    </string-array>

    <string-array name="categoria_info">
        <item>Veja aqui as flores mais vendidas esta semana!</item>
        <item>Escolha a sua prenda do dia da mãe!</item>
        <item>Descubra as melhores plantas para decoração!</item>
        <item>Plante já a sua árvore!</item>
        <item>Obtenha as plantas mai exóticas!</item>

    </string-array>

    <array name="inCategoria_images">
        <item>@drawable/flor_01</item>
        <item>@drawable/flor_02</item>
        <item>@drawable/flor_03</item>
        <item>@drawable/flor_04</item>
        <item>@drawable/flor_05</item>
        <item>@drawable/flor_06</item>
        <item>@drawable/flor_07</item>
        <item>@drawable/flor_08</item>
        <item>@drawable/flor_09</item>
    </array>

    <string-array name="inCategoria_nomes">
        <item>Mais Vendidas</item>
        <item>Dia da Mãe</item>
        <item>Decorativas</item>
        <item>Árvores</item>
        <item>Mais raras</item>
    </string-array>

    <string-array name="inCategoria_descricao">
        <item>Veja aqui as flores mais vendidas esta semana!</item>
        <item>Escolha a sua prenda do dia da mãe!</item>
        <item>Descubra as melhores plantas para decoração!</item>
        <item>Plante já a sua árvore!</item>
        <item>Obtenha as plantas mai exóticas!</item>

    </string-array>

    <array name="categoria_images">
        <item>@drawable/mais_vendidas</item>
        <item>@drawable/dia_da_mae</item>
        <item>@drawable/decorativas</item>
        <item>@drawable/arvores</item>
        <item>@drawable/raras</item>

    </array>
    <string name="title_activity_ativity_dados_conta">AtivityDadosConta</string>
    <string name="title_activity_in_categoria">InCategoria</string>
    <string name="eventos">Eventos</string>
    <string name="tipo_de_plantas">Tipo de Plantas</string>
</resources>
