<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/pagina_inicial"
            android:icon="@drawable/ic_pagina_inicial"
            android:title="@string/PaginaInicial" />
        <item
            android:id="@+id/filtros"
            android:icon="@drawable/ic_filtros"
            android:title="@string/filtros" />
        <item
            android:id="@+id/carrinho"
            android:icon="@drawable/ic_carrinho"
            android:title="@string/carrinho" />
        <item
            android:id="@+id/contacte_nos"
            android:icon="@drawable/ic_contacte_nos"
            android:title="@string/contacte_nos" />
        <item
            android:id="@+id/sair"
            android:icon="@drawable/ic_sair"
            android:title="@string/sair" />
    </group>

</menu>
