<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:id="@+id/cardViewId"
    android:orientation="horizontal">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <ImageView
            android:id="@+id/categoriaImage2"
            android:layout_width="280dp"
            android:layout_height="200dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />


        <TextView
            android:id="@+id/title2"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/title_placeholder"
            android:textColor="@android:color/black"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />


        <TextView
            android:id="@+id/subTitle2"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title2"
            android:padding="8dp"
            android:text="@string/categoria_info_placeholder" />


        <TextView
            android:id="@+id/preco"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subTitle2"
            android:padding="8dp"
            android:text= "@string/preco"
            android:layout_marginTop="70dp"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>